--- a/dial_visualization/conv_visualization/ConvVisualizer.ui
+++ b/dial_visualization/conv_visualization/ConvVisualizer.ui
@@ -26,7 +26,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -197,12 +197,12 @@ background: transparent;</string>
   <customwidget>
    <class>EQGraphicsView</class>
    <extends>QGraphicsView</extends>
-   <header>./conv_visualization/extended_widgets/EQGraphicsView</header>
+   <header>dial_visualization/conv_visualization/extended_widgets/EQGraphicsView</header>
   </customwidget>
   <customwidget>
    <class>EQTreeView</class>
    <extends>QTreeView</extends>
-   <header>./conv_visualization/extended_widgets/EQTreeView</header>
+   <header>dial_visualization/conv_visualization/extended_widgets/EQTreeView</header>
   </customwidget>
  </customwidgets>
  <resources/>
