--- a/dial_visualization/conv_visualization/ConvVisualizer.ui
+++ b/dial_visualization/conv_visualization/ConvVisualizer.ui
@@ -78,6 +78,9 @@ background: transparent;</string>
        </item>
        <item row="3" column="0">
         <widget class="QPlainTextEdit" name="debugText">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -95,6 +98,12 @@ background: transparent;</string>
            <width>16777215</width>
            <height>100</height>
           </size>
+         </property>
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -116,7 +125,7 @@ background: transparent;</string>
      </widget>
      <widget class="QWidget" name="tabDebugConv">
       <attribute name="title">
-       <string>Convolutional Layers Debug</string>
+       <string>Layer Visualization</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="2" column="0">
